# alice_NBV

./: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  =20.3  LICENSE  alice_sub.ino  back.pcd  bottle1.pcd  bottle2.pcd  bottle3.pcd  bottle4.pcd  bottle5.pcd  bottle6.pcd  bottle7.pcd  bunny1.pcd  bunny2.pcd  bunny3.pcd  bunny4.pcd  bunny5.pcd  conversion_result.pcd  coordinate_test.pcd  coordinate_test_150.pcd  coordinate_test_15_20_deg.pcd  cyl1.pcd  cyl2.pcd  front.pcd  mok1.pcd  mok2.pcd  mok3.pcd  mok4.pcd  mok5.pcd  mok6.pcd  mok_0.pcd  mok_135.pcd  mok_180.pcd  mok_45.pcd  mok_90.pcd  mok_front.pcd  (+8 more)
PC/: hsv.pcd  stanford_bunny.pcd  stanford_bunny_1.pcd
devel/: .catkin  .rosinstall  local_setup.sh
install/: local_setup.sh  setup.sh
myenv/: pyvenv.cfg
processed_pcd/: 1.pcd  2.pcd  3.pcd  bottle1.pcd  bottle2.pcd  bottle3.pcd  cyl1.pcd  (+37 more)
src/alice_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/alice_moveit/config/: alice.srdf  fake_controllers.yaml  gazebo_alice.urdf  joint_limits.yaml  kinematics.yaml  moveit_commander.rviz  moveit_config.rviz  ompl_planning.yaml  ros_controllers copy.yaml  ros_controllers.yaml  rviz_config.rviz  simple_moveit_controllers.yaml  stomp_planning.yaml
src/alice_moveit/launch/: default_warehouse_db.launch  demo.launch  gazebo.launch  launch_moveit.launch  move_group.launch  move_group_fake_controller.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  physical_robot.launch  planning_context.launch  ros_controllers.launch  setup_assistant.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
(+316 files in other folders)
